ru/baremetal/cli-ref/v2/private-cloud-connection/create.md
---
editable: false
canonical: https://yandex.cloud/en/docs/cli/cli-ref/baremetal/cli-ref/v2/private-cloud-connection/create/
---

# yc baremetal v2 private-cloud-connection create

Creates a private cloud connection in the specified folder.

#### Command Usage

Syntax:

`yc baremetal v2 private-cloud-connection create <CLOUD-ID>`

#### Flags

#|
||Flag | Description ||
|| `--cloud-id` | `string`

ID of the parent cloud. To get the cloud ID, use a [yandex.cloud.resourcemanager.v1.CloudService.List] request. ||
|| `--folder-id` | `string`

ID of the parent folder. To get the folder ID, use a [yandex.cloud.resourcemanager.v1.FolderService.List] request. ||
|| `--private-cloud-connection` | `shorthand/json`

The private cloud connection to create.

{% cut "Description" %}

> - cloud-id (string)\
ID of the cloud that the private cloud connection belongs to.
> - folder-id (string)\
ID of the folder that the private cloud connection belongs to.
> - vrf-id (string)\
ID of VRF that is connected to routing Instance.
> - routing-instance-id (string)\
ID of Cloud Router Routing Instance.
> - name (string)\
Name of the private cloud connection.

{% endcut %}

{% cut "Shorthand Syntax" %}

```hcl
{
  cloud-id = string,
  folder-id = string,
  name = string,
  routing-instance-id = string,
  vrf-id = string
}
```

{% endcut %}

{% cut "JSON Syntax" %}

```json
{
  "cloud-id": "string",
  "folder-id": "string",
  "name": "string",
  "routing-instance-id": "string",
  "vrf-id": "string"
}
```

{% endcut %} ||
|| `--async` | Display information about the operation in progress, without waiting for the operation to complete. ||
|| `-r`, `--request-file` | `string`

Path to a request file. ||
|| `--example-json` | Generates a JSON template of the request. ||
|| `-e`, `--example-yaml` | Generates a YAML template of the request.

The template can be customized and used as input for the command.

Usage example:

1. Generate template:
yc baremetal v2 private-cloud-connection create --example-json > request.json
or
yc baremetal v2 private-cloud-connection create --example-yaml > request.yaml

2. Edit the template file

3. Run with template:
yc baremetal v2 private-cloud-connection create -r request.json
or
yc baremetal v2 private-cloud-connection create -r request.yaml ||
|#

#### Global Flags

#|
||Flag | Description ||
|| `--profile` | `string`

Set the custom profile. ||
|| `--region` | `string`

Set the region. ||
|| `--folder-name` | `string`

Set the name of the folder to use (will be resolved to id). ||
|| `--debug` | Debug logging. ||
|| `--debug-grpc` | Debug gRPC logging. Very verbose, used for debugging connection problems. ||
|| `--no-user-output` | Disable printing user intended output to stderr. ||
|| `--pager` | `string`

Set the custom pager. ||
|| `--no-pager` | Do not pipe help output through a pager. ||
|| `--format` | `string`

Set the output format: text, yaml, json, table, summary \|\| summary[name, instance.id, instance.disks[0].size]. ||
|| `--retry` | `int`

Enable gRPC retries. By default, retries are enabled with maximum 5 attempts.
Pass 0 to disable retries. Pass any negative value for infinite retries.
Even infinite retries are capped with 2 minutes timeout. ||
|| `--timeout` | `string`

Set the timeout. ||
|| `--token` | `string`

Set the IAM token to use. ||
|| `--impersonate-service-account-id` | `string`

Set the ID of the service account to impersonate. ||
|| `--no-browser` | Disable opening browser for authentication. ||
|| `--query` | `string`

Query to select values from the response using jq syntax ||
|| `--print-metadata` | Print operation metadata along with result. ||
|| `--syntax` | `string`

Choose syntax option. ||
|| `--cli-auto-prompt` | `string[="on"]`

Enable interactive auto-prompt mode. Values: on, partial, off. Bare --cli-auto-prompt is equivalent to --cli-auto-prompt=on. ||
|| `--no-cli-auto-prompt` | Disable interactive auto-prompt mode (overrides --cli-auto-prompt, env and profile). ||
|| `-h`, `--help` | Display help for the command. ||
|#